hermes_fuzz_executed_few_shot_v2/fuzz_56_execution
'use strict';
var Array_prototype_some = Array.prototype.some;
var obj = { x: 42 };
Array_prototype_some.call(obj, Array_prototype_some) === true;
 

```

---



Execution Output ------------------:
test.js:11:1: error: non-terminated template literal

^
test.js:7:3: note: template literal started here
```
  ^
test.js:11:1: error: invalid expression

^
